fix sector menu - visibility to public

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@ input, select, textarea {
   border-radius: 0;
   -webkit-appearance: none;
 }
+input[type="checkbox"] {
+  -webkit-appearance: auto;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
